deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fb-api-service
spec:
  type: ClusterIP
  selector:
    app: fb-api
  ports:
  - port: 443
    targetPort: 3002
